# Yogacara

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFESTO.md  README.md  SECURITY.md  __init__.py  app.py  config.yaml  logger.py  pyproject.toml  render.yaml  requirements.txt  setup.py  start.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: demo.yml  tests.yml
core/: __init__.py  alaya_store.py  emergence.py
demo-site/: 404.html  chat.html  index.html
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  compression_design.md  wechat_article.html  优化报告.md  优化设计.md
docs/wiki/: API-Reference.md  Alaya-Store.md  Architecture.md  Awakening-Levels.md  Contributing.md  Emergence-Engine.md  Examples.md  Home.md  Installation.md  Philosophy.md  Quick-Start.md  Seed-System.md
examples/: awakening_journey.py  basic_usage.py  custom_seeds.py
paper/: README.md  generate_figures.py  main.tex  references.bib  yogacara_paper.md
tests/: __init__.py  test_alaya_compressor.py  test_alaya_store.py  test_awakening.py  test_compression_observer.py  test_emergence.py  test_llm.py  test_manas_model_v2.py  test_purifier_v2.py  test_seed_system.py
yogacara/: __init__.py  cli.py  config.py  py.typed
yogacara/core/: __init__.py  alaya_store.py  awakening.py  emergence.py  seed_system.py
yogacara/core/compression/: __init__.py  alaya_compressor.py  compression_observer.py  manas_model_v2.py  purifier_v2.py
yogacara/core/llm/: __init__.py  base.py  openai_adapter.py  seed_generator.py
